# united-api

./: .env.sample  .gitignore  Cargo.toml  DOCKERFILE  Dockerfile  Dockerfile.debian  Dockerfile.github-action  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  index.js  package.json  seed.js
migrations/2023-09-22-133750_create_users_table/: up.sql
migrations/2023-09-22-133759_create_login_history_table/: up.sql
prisma/: schema.prisma
src/: config.js  main.rs  secret.key.sample
src/api/: account_controller.rs  mod.rs  users_controller.rs
src/config/: app.rs  db.rs  init.rs  mod.rs
src/controllers/: apiStatus.controller.js  assessments.controller.js  auth.controller.js  contents.controller.js  courses.controller.js  enrollments.controller.js  events.controller.js  grades.controller.js  notifications.controller.js  professors.controller.js  subjects.controller.js  user.controller.js  users.controller.js
src/middleware/: auth_middleware.rs  mod.rs  permission_middleware.rs
src/middlewares/: authSession.js
src/models/: filters.rs  login_history.rs  pagination.rs  user.rs  user_token.rs
src/routes/: apiStatus.routes.js  assessments.routes.js  auth.routes.js  contents.routes.js  courses.routes.js  enrollments.routes.js  events.routes.js  grades.routes.js  notifications.routes.js  professors.routes.js  subjects.routes.js  user.routes.js  users.routes.js
src/services/: account_service.rs  mod.rs  users_service.rs
src/utils/: constants.rs  mod.rs  response.js  schema.rs  token_utils.rs
(+9 files in other folders)
