[package]
name = "rust-actix-web-template"
version = "0.0.1"
authors = ["Mateus Barbosa <barbosamat16@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-service = "2.0.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
log = "0.4.14"
env_logger = "0.10.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.107"
dotenv = "0.15.0"
futures = "0.3.12"
failure = "0.1.8"
derive_more = "0.99.11"
jsonwebtoken = "8.1.0"
bcrypt = "0.14.0"
base64 = "0.21.4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
